add new responsiveness modifications

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                 <option value="LAT">LAT</option>
             </select>
         </nav>
+        <div class="hamburger">
+            <i class="fa fa-bars fa-2x" aria-hidden="true"></i>
+        </div>
     </header>
     <main>
         <section class="hero-section">
@@ -73,7 +76,7 @@
                 </div>
             </div>
         </section>
-        <section class="services-section">
+        <section class="services-section top-selling">
             <div class="top-section">
                 <h5 class="section-sm-heading">Top selling</h5>
                 <h2 class="section-big-heading">top destinations</h2>
@@ -154,7 +157,7 @@
             </div>
         </section>
         <section class="testimonial">
-            <div class="left-trip-section">
+            <div class="left-trip-section testimonial-left-trip">
                 <h5 class="trip-sm-heading">TESTIMONIALS</h5>
                 <h2 class="trip-big-heading">What people say <br> About us</h2>
                 <div class="dotted-img">
@@ -162,23 +165,23 @@
                 </div>
             </div>
             <div class="right-trip-section">
-                <img src="./Group 64.png" alt="">
+                <img src="./Group 64.png" alt="" width="400px" height="400px">
             </div>
         </section>
         <section class="partners">
             <img src="./image 27.png" alt="" class="partner-img">
             <img src="./image 28.png" alt="" class="partner-img">
             <img src="./image 29.png" alt="" class="partner-img">
-            <img src="./image 30.png" alt="" class="partner-img">
-            <img src="./image 31.png" alt="" class="partner-img">
+            <img src="./image 30.png" alt="" class="partner-img img-32">
+            <img src="./image 31.png" alt="" class="partner-img img-31">
         </section>
         <section class="subscribe">
-            <i class="fa fa-telegram fa-4x font_awe" aria-hidden="true" style="color: #747DEF"></i>
-            <h2 class="sub-heading">Subscribe to get information, latest news and other <br>
+            <i class="fa fa-telegram fa-3x font_awe" aria-hidden="true" style="color: #747DEF"></i>
+            <h2 class="sub-heading">Subscribe to get information,<br> latest news and other <br>
                 interesting offers about Jadoo</h2>
             <form class="form-box">
                 <div class="input-box">
-                    <i class="fa fa-envelope-o fa-2x" aria-hidden="true"></i>
+                    <i class="fa fa-envelope-o fa-1x" aria-hidden="true"></i>
                     <input type="text" placeholder="Your email">
                 </div>
                 <button class="subscribe-btn">Subscribe</button>
@@ -191,35 +194,25 @@
                 <a href="#" class="footer-jadoo">
                     <img src="./Logo.png" alt="Jadoo logo">
                 </a>
-                <!-- <h2 class="footer-jadoo">Jadoo.</h2> -->
                 <p style="font-size: 13px ;color: #5E6282;font-weight: 500;margin-top: 20px;">Book you trip in minute, get full control for much longer </p>
             </div>
             <div class="inner-top-footer">
                 <h5 class="footer-h5">Company</h5>
                 <a href="#" class="footer-h5-p">About</a> 
-                <!-- <p class="footer-h5-p">About</p> -->
                 <a href="#" class="footer-h5-p">Careers</a>
-                <!-- <p class="footer-h5-p">Careers</p> -->
                 <a href="#" class="footer-h5-p">Mobile</a>
-                <!-- <p class="footer-h5-p">Mobile</p> -->
             </div>
             <div class="inner-top-footer">
                 <h5 class="footer-h5">Contact</h5>
                 <a href="#" class="footer-h5-p">Help/FAQ</a>
-                <!-- <p class="footer-h5-p">Help/FAQ</p> -->
                 <a href="#" class="footer-h5-p">Press</a>
-                <!-- <p class="footer-h5-p">Press</p> -->
                 <a href="#" class="footer-h5-p">Affiliates</a>
-                <!-- <p class="footer-h5-p">Affilates</p> -->
             </div>
             <div class="inner-top-footer">
                 <h5 class="footer-h5">More</h5>
                 <a href="#" class="footer-h5-p">Airlinesfees</a>
-                <!-- <p class="footer-h5-p">Airlinesfees</p> -->
                 <a href="#" class="footer-h5-p">Airline</a>
-                <!-- <p class="footer-h5-p">Airline</p> -->
                 <a href="#" class="footer-h5-p">Low fare tips</a>
-                <!-- <p class="footer-h5-p">Low fare tips</p> -->
             </div>
             <div class="inner-top-footer-icons">
                 <div>
@@ -251,25 +244,5 @@
             <p>Designed by Akpeghagha Oghenevwede</p>
         </div>
     </footer>
-    <!-- <main>
-        <div>
-            <div>
-                <p>BEST DESTINATIONS AROUND THE WORLD</p>
-                <h2>Travel, enjoy and live a new and full life</h2>
-                <p>Built Wicket longer admire do bartin vanity itself do in it. <br>
-                   Preferred to sportsmen it engrossed listening. Park gate sell they west hartd for the.
-                </p>
-            </div>    
-            <div>
-                <button>Find out more</button>
-                <img style="width: 40px; height: 40px;" src="./Play button.png" alt="">
-                <p>Play Demo</p>
-            </div>    
-            <div>
-                <img style="width: 300px; height: 300px;" src="./Traveller 1.png" alt="">
-            </div>
-        </div>
-    </main>
-    <footer></footer> -->
 </body>
 </html>
