add new responsiveness modifications

--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
                 <p class="hero-text">Built Wicket longer admire do barton vanity itself do in it. Preferred to sportsmen it engrossed listening. Park gate sell they west hard for the.</p>
                 <a href="#" class="hero-link-btn">Find out more</a>
                 <a href="https://www.youtube.com" class="hero-play-btn">
-                    <!-- <img src="./Play-button2.png" alt="play button"> -->
                     Play Demo
                 </a>
             </div>
@@ -215,7 +214,7 @@
                 <a href="#" class="footer-h5-p">Low fare tips</a>
             </div>
             <div class="inner-top-footer-icons">
-                <div>
+                <div class="inner-footer-icons">
                     <a href="https://facebook.com">
                         <img src="./facebook.png" alt="facebook icon">
                     </a>
@@ -229,7 +228,7 @@
                 <div class="footer-p-discover">
                     <p>Discover your app</p>
                 </div>
-                <div>
+                <div class="inner-footer-icons">
                     <a href="https://play.google.com/store">
                         <img src="./Google Play.png" alt="Google play store icon">
                     </a>
