--- a/index.html
+++ b/index.html
@@ -243,5 +243,6 @@
             <p>Designed by Akpeghagha Oghenevwede</p>
         </div>
     </footer>
+    <script src="./script.js"></script>
 </body>
 </html>
